rpsls.css
* {
  font-size: 62.5%; /* 1rem == 10px */
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(241, 222, 196);
  color: #000;
  font-family: "Bungee Inline", cursive;
  font-family: "Manrope", sans-serif;
}

body {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

img {
  border: 1px solid gray;
  border-radius: 5px;
}

.main-container {
  width: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.header {
  width: 100%;
  margin-top: 2rem;
  font-family: "Bungee Inline", cursive;
  font-size: 4rem;
  text-align: center;
  border-bottom: 2px solid black;
}

.header-text {
  width: 100%;
  margin-top: 2rem;
  font-family: "Manrope", sans-serif;
  font-size: 2.5rem;
  text-align: center;
}

#weapon-images {
  width: 90%;
  margin-top: 2rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

#weapon-images > img {
  margin: 0.25rem;
}

.instructions {
  width: 100%;
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.instructions-link > a {
  text-decoration: none;
  color: blue;
  width: 100%;
  font-family: "Manrope", sans-serif;
  font-size: 1.5rem;
}

#choices-container {
  width: 50%;
  margin-top: 2rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

.user-container,
.computer-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.userChoice,
.computerChoice,
.small-text {
  width: 100%;
  font-family: "Manrope", sans-serif;
  font-size: 1.5rem;
  font-weight: 700;
  text-align: center;
}

#userChoiceImage,
#computerChoiceImage {
  margin-top: 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
}

#userChoicePng,
#compChoicePng {
  margin: 0.5rem;
}

.scores-container {
  width: 100%;
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#who-wins-text {
  width: 100%;
  font-family: "Manrope", sans-serif;
  font-size: 2rem;
  text-align: center;
}

.page-text {
  width: 100%;
  margin-top: 2rem;
  font-family: "Manrope", sans-serif;
  font-size: 1.5rem;
  text-align: center;
}

.score-tally {
  width: 35%;
  margin-top: 0;
  padding: 0.5rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

#user-score,
#tie-score,
#computer-score {
  width: 100%;
  padding: 0.25rem;
  font-family: "Manrope", sans-serif;
  font-size: 1.5rem;
  border: 1px solid black;
}

@media only screen and (max-width: 768px) {
  .main-container {
    width: 95%;
  }

  .header {
    margin-top: 1rem;
    font-size: 2rem;
  }

  .header-text {
    font-size: 1.6rem;
  }

  #weapon-images {
    width: 100%;
  }

  .instructions-link > a {
    font-size: 1.5rem;
  }

  #choices-container {
    width: 100%;
  }

  #who-wins-text {
    font-size: 1.25rem;
  }

  .score-tally {
    width: 100%;
    padding: 0;
  }

  #user-score,
  #tie-score,
  #computer-score {
    font-size: 1.25rem;
  }
}

